<resources>
    <string name="app_name">Food Order</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="menu">-- MENU --</string>
    <string name="rice"><b>FRIED RICE</b></string>
    <string name="kapao"><b>KRAPAO</b></string>
    <string name="egg"><b>OMELET</b></string>
    <string name="padthai"><b>PADTAI</b></string>
    <string name="order">ORDER</string>
    <string name="order_text">-- ORDER --</string>
    <string name="total_text">Total</string>
    <string name="place_order">Place Order</string>

    <string name="kapao_price">฿ 60</string>
    <string name="rice_price">฿ 45</string>
    <string name="egg_price">฿ 40</string>
    <string name="padthai_price">฿ 65</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="insert_table_num">ENTER YOUR TABLE NUMBER</string>
    <string name="insert_ph_num">ENTER YOUR PHONE NUMBER</string>
    <string name="insert_note">NOTE</string>

</resources>