<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bear"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/menu"
        android:layout_width="314dp"
        android:layout_height="31dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:background="#FFFFFF"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textColor="#2A341C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="314dp"
        android:layout_height="575dp"
        android:layout_below="@+id/menu"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/krapao"
                android:layout_width="245dp"
                android:layout_height="138dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu"
                app:srcCompat="@drawable/kapao" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/krapao_box"
                    android:layout_width="99dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:onClick="addListenerOnButtonClick"
                    android:text="@string/kapao" />

                <TextView
                    android:id="@+id/kapao_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/kapao_price"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <ImageView
                android:id="@+id/rice"
                android:layout_width="251dp"
                android:layout_height="142dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kapao_text"
                app:srcCompat="@drawable/rice" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/rice_box"
                    android:layout_width="117dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:onClick="addListenerOnButtonClick"
                    android:text="@string/rice" />

                <TextView
                    android:id="@+id/rice_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rice_price"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <ImageView
                android:id="@+id/egg"
                android:layout_width="256dp"
                android:layout_height="149dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rice_text"
                app:srcCompat="@drawable/egg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/egg_box"
                    android:layout_width="99dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:onClick="addListenerOnButtonClick"
                    android:text="@string/egg" />

                <TextView
                    android:id="@+id/egg_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/egg_price"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <ImageView
                android:id="@+id/padthai"
                android:layout_width="260dp"
                android:layout_height="141dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/egg_text"
                app:srcCompat="@drawable/padthai" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/padtai_box"
                    android:layout_width="99dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:onClick="addListenerOnButtonClick"
                    android:text="@string/padthai" />

                <TextView
                    android:id="@+id/padthai_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/padthai_price"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>