<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bear"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/your_order"
        android:layout_width="334dp"
        android:layout_height="31dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="#FFFFFF"
        android:text="@string/order_text"
        android:textAlignment="center"
        android:textColor="#2A341C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="334dp"
        android:layout_height="555dp"
        android:layout_below="@+id/your_order"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="#FFFFFF"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_order">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="153dp"
                android:layout_height="113dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/icon" />

            <LinearLayout
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/order0"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/order" />

                <Button
                    android:id="@+id/minus"
                    android:layout_width="30dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:width="70dp"
                    android:height="30dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="0dip"
                    android:text="@string/minus"
                    android:onClick="countDown"
                    android:visibility="invisible"
                    android:textSize="12dp"
                    app:backgroundTint="@color/purple_200" />

                <TextView
                    android:id="@+id/Amount"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:visibility="invisible"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/add"
                    android:layout_width="35dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:width="70dp"
                    android:height="30dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="countUp"
                    android:padding="0dip"
                    android:text="@string/add"
                    android:textSize="12dp"
                    android:visibility="invisible"
                    app:backgroundTint="@color/purple_200" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/order1"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/your_order" />

                <Button
                    android:id="@+id/minus1"
                    android:layout_width="30dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:width="70dp"
                    android:height="30dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="0dip"
                    android:text="@string/minus"
                    android:onClick="countDown"
                    android:textSize="12dp"
                    android:visibility="invisible"
                    app:backgroundTint="@color/purple_200"/>

                <TextView
                    android:id="@+id/Amount1"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:visibility="invisible"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/add1"
                    android:layout_width="30dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:width="70dp"
                    android:height="30dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="0dip"
                    android:text="@string/add"
                    android:onClick="countUp"
                    android:visibility="invisible"
                    android:textSize="12dp"
                    app:backgroundTint="@color/purple_200"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/order2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/order1" />

                <Button
                    android:id="@+id/minus2"
                    android:layout_width="30dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:width="70dp"
                    android:height="30dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="0dip"
                    android:text="@string/minus"
                    android:onClick="countDown"
                    android:visibility="invisible"
                    android:textSize="12dp"
                    app:backgroundTint="@color/purple_200"/>

                <TextView
                    android:id="@+id/Amount2"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:visibility="invisible"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/add2"
                    android:layout_width="30dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:width="70dp"
                    android:height="30dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="0dip"
                    android:text="@string/add"
                    android:onClick="countUp"
                    android:visibility="invisible"
                    android:textSize="12dp"
                    app:backgroundTint="@color/purple_200" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="310dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/order3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/order2" />

                <Button
                    android:id="@+id/minus3"
                    android:layout_width="30dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:width="70dp"
                    android:height="30dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="0dip"
                    android:text="@string/minus"
                    android:onClick="countDown"
                    android:visibility="invisible"
                    android:textSize="12dp"
                    app:backgroundTint="@color/purple_200" />

                <TextView
                    android:id="@+id/Amount3"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:visibility="invisible"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/add3"
                    android:layout_width="30dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:width="70dp"
                    android:height="30dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="0dip"
                    android:text="@string/add"
                    android:onClick="countUp"
                    android:visibility="invisible"
                    android:textSize="12dp"
                    app:backgroundTint="@color/purple_200" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/total"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/total_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/order10" />

                <TextView
                    android:id="@+id/price_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="0"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/order10" />
            </LinearLayout>

            <EditText
                android:id="@+id/tablenum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/insert_table_num"
                android:inputType="phone"
                android:padding="@dimen/padding_regular"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/phonenum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@color/white"
                android:hint="@string/insert_ph_num"
                android:inputType="phone"
                android:padding="@dimen/padding_regular"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:autofillHints=""
                android:background="@color/white"
                android:hint="@string/insert_note"
                android:inputType="textPersonName"
                android:padding="@dimen/padding_regular"
                android:textAlignment="viewStart"
                android:textIsSelectable="false"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:background="#2A341C"
                android:onClick="place_onclick"
                android:text="@string/place_order"
                app:backgroundTint="@color/purple_500"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>